# rtt_soem

examples/: lua_deployement_script.lua  readme.txt  run.ops  soem.cpf
rtt_soem/: CMakeLists.txt  package.xml
soem_beckhoff_drivers/: CMakeLists.txt
soem_core/: CMakeLists.txt  package.xml
soem_ebox/: CMakeLists.txt
soem_master/: CMakeLists.txt  soem_master_component.cpp
