<package>
  <name>rtt_soem</name>
  <version>0.2.0</version>
  <description >
    Orocos component that used the SOEM library and that works as an EtherCAT master enabling simple comunication with the slaves
  </description>
  <author>Ruben Smits, ruben.smits@intermodalics.eu</author>
  <maintainer email="ruben@intermodalics.eu"> Ruben Smits</maintainer>
  <author>Ruben Smits</author>
  <license>GPL with runtime exception,BSD,LGPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros</run_depend>
  <run_depend>orocos_toolchain</run_depend>
  <run_depend>rtt_ros_integration</run_depend>
  <run_depend>soem_master</run_depend>
  <run_depend>soem_ebox</run_depend>
  <run_depend>soem_beckhoff_drivers</run_depend>
 <export>
   <metapackage />
 </export>
</package>
